[build-system]
requires = ["setuptools >= 62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "combo_lock"
version = "0.3.0"
authors = [
  {name = "Åke Forslund", email = "ake.forslund@gmail.com"},
  {name = "JarbasAI", email = "jarbasai@mailfence.com"},
]

dynamic = ["dependencies"]

description = "A combined process and thread lock"
readme = "README.md"

license = {text = "Apache License v2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Repository = "https://github.com/forslund/combo-lock"
Homepage = "https://github.com/forslund/combo-lock"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

