[build-system]
requires = ["setuptools >= 62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "combo_lock"
version = "0.3.1"
authors = [
  {name = "Åke Forslund", email = "ake.forslund@gmail.com"},
  {name = "JarbasAI", email = "jarbasai@mailfence.com"},
]

dynamic = ["dependencies"]

description = "A combined process and thread lock"
readme = "README.md"

license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Repository = "https://github.com/forslund/combo-lock"
Homepage = "https://github.com/forslund/combo-lock"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["combo_lock*"]

[tool.setuptools.package-data]
"combo_lock" = ["*.txt", "*.md"]
